--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,158 +1,121 @@
-name: RDP (Optimized & Fixed User Creation)
+name: RDP
 
 on:
   workflow_dispatch:
 
 jobs:
-  rdp-session:
+  secure-rdp:
     runs-on: windows-latest
     timeout-minutes: 360
 
     steps:
-      - name: Enable RDP and Configure Firewall
-        shell: powershell
+      - name: Configure RDP & Performance Settings
         run: |
           # Enable Remote Desktop
           Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server' `
-            -Name "fDenyTSConnections" -Value 0 -Force
+                           -Name "fDenyTSConnections" -Value 0 -Force
+          
+          # Use the built-in, secure "Remote Desktop" firewall rules
+          netsh advfirewall firewall set rule group="remote desktop" new enable=Yes
 
-          # (Optional) Disable NLA for easier connections; remove if you want NLA enforced
-          Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' `
-            -Name "UserAuthentication" -Value 0 -Force
-
-          # Ensure RDP port is allowed
-          if (-not (Get-NetFirewallRule -DisplayName "RDP Access" -ErrorAction SilentlyContinue)) {
-            netsh advfirewall firewall add rule name="RDP Access" dir=in action=allow protocol=TCP localport=3389
-          } else {
-            Write-Host "Firewall rule 'RDP Access' already present"
+          # --- RDP Performance Tuning (Reduce Bandwidth) ---
+          $PerfPath = "HKLM:\SOFTWARE\Policies\Microsoft\Windows NT\Terminal Services"
+          if (-not (Test-Path $PerfPath)) {
+              New-Item -Path $PerfPath -Force | Out-Null
           }
+          # Disable cosmetic features to save bandwidth
+          Set-ItemProperty -Path $PerfPath -Name "fDisableCursorShadow" -Value 1 -Force
+          Set-ItemProperty -Path $PerfPath -Name "fDisableMenuAnims" -Value 1 -Force
+          Set-ItemProperty -Path $PerfPath -Name "fDisableVisualStyles" -Value 1 -Force
+          Set-ItemProperty -Path $PerfPath -Name "fDisableWallpaper" -Value 1 -Force
+          Set-ItemProperty -Path $PerfPath -Name "fEnableFontSmoothing" -Value 0 -Force
 
-      - name: Create or Update RDP User (robust)
-        shell: powershell
+          # Set a lower default color depth
+          Set-ItemProperty -Path "HKLM:\SYSTEM\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp" `
+                           -Name "ColorDepth" -Value 4 -Force # 4 = 16-bit
+          
+          # (Optional) Restart the Remote Desktop service to ensure changes take effect
+          Restart-Service -Name TermService -Force
+
+      - name: Create RDP User with Secure Password
         run: |
-          $username = "RDP"
-
-          # Generate a reasonably strong password (14 chars, 3 non-alphanumeric)
-          $pw = [System.Web.Security.Membership]::GeneratePassword(14,3)
-          $secure = ConvertTo-SecureString $pw -AsPlainText -Force
-
-          try {
-            if (Get-LocalUser -Name $username -ErrorAction SilentlyContinue) {
-              Write-Host "User '$username' exists — updating password"
-              Set-LocalUser -Name $username -Password $secure -ErrorAction Stop
-            } else {
-              Write-Host "Creating user '$username'"
-              New-LocalUser -Name $username -Password $secure -AccountNeverExpires -UserMayNotChangePassword:$false -ErrorAction Stop
-            }
-          } catch {
-            Write-Error "Failed to create or update local user: $_"
-            exit 1
+          Add-Type -AssemblyName System.Security
+          $charSet = @{
+              Upper   = [char[]](65..90)      # A-Z
+              Lower   = [char[]](97..122)     # a-z
+              Number  = [char[]](48..57)      # 0-9
+              Special = ([char[]](33..47) + [char[]](58..64) +
+                         [char[]](91..96) + [char[]](123..126)) # Special characters
           }
-
-          # Ensure group membership; check groups exist before adding
-          $groups = @("Administrators","Remote Desktop Users")
-          foreach ($g in $groups) {
-            if (-not (Get-LocalGroup -Name $g -ErrorAction SilentlyContinue)) {
-              Write-Warning "Local group '$g' not found; skipping group add"
-              continue
-            }
-            if (-not (Get-LocalGroupMember -Group $g -Member $username -ErrorAction SilentlyContinue)) {
-              try {
-                Add-LocalGroupMember -Group $g -Member $username -ErrorAction Stop
-              } catch {
-                Write-Warning "Failed to add $username to group $g: $_"
-              }
-            } else {
-              Write-Host "$username already a member of $g"
-            }
-          }
-
-          # Export credentials into the GitHub environment
-          Add-Content -Path $env:GITHUB_ENV -Value "RDP_USER=$username"
-          Add-Content -Path $env:GITHUB_ENV -Value "RDP_PASS=$pw"
-          Add-Content -Path $env:GITHUB_ENV -Value "RDP_CREDS=User: $username | Password: $pw"
-
-          # Final check
-          if (-not (Get-LocalUser -Name $username -ErrorAction SilentlyContinue)) {
-            Write-Error "User creation verification failed"
-            exit 1
-          } else {
-            Write-Host "User $username ready"
+          $rawPassword = @()
+          $rawPassword += $charSet.Upper | Get-Random -Count 4
+          $rawPassword += $charSet.Lower | Get-Random -Count 4
+          $rawPassword += $charSet.Number | Get-Random -Count 4
+          $rawPassword += $charSet.Special | Get-Random -Count 4
+          $password = -join ($rawPassword | Sort-Object { Get-Random })
+          $securePass = ConvertTo-SecureString $password -AsPlainText -Force
+          New-LocalUser -Name "RDP" -Password $securePass -AccountNeverExpires
+          Add-LocalGroupMember -Group "Administrators" -Member "RDP"
+          Add-LocalGroupMember -Group "Remote Desktop Users" -Member "RDP"
+          
+          echo "RDP_CREDS=User: RDP | Password: $password" >> $env:GITHUB_ENV
+          
+          if (-not (Get-LocalUser -Name "RDP")) {
+              Write-Error "User creation failed"
+              exit 1
           }
 
       - name: Install Tailscale
-        shell: powershell
         run: |
-          $url = "https://pkgs.tailscale.com/stable/tailscale-setup-latest-amd64.msi"
-          $out = "$env:TEMP\tailscale.msi"
-          Invoke-WebRequest -Uri $url -OutFile $out -UseBasicParsing
-          # Proper quoting for msiexec arguments
-          Start-Process msiexec.exe -ArgumentList "/i","`"$out`"","/quiet","/norestart" -Wait
-          Remove-Item $out -Force -ErrorAction SilentlyContinue
+          $tsUrl = "https://pkgs.tailscale.com/stable/tailscale-setup-1.82.0-amd64.msi"
+          $installerPath = "$env:TEMP\tailscale.msi"
+          
+          Invoke-WebRequest -Uri $tsUrl -OutFile $installerPath
+          Start-Process msiexec.exe -ArgumentList "/i", "`"$installerPath`"", "/quiet", "/norestart" -Wait
+          Remove-Item $installerPath -Force
 
       - name: Establish Tailscale Connection
-        shell: powershell
-        env:
-          TAILSCALE_AUTH_KEY: ${{ secrets.TAILSCALE_AUTH_KEY }}
         run: |
-          $exe = Join-Path $env:ProgramFiles "Tailscale\tailscale.exe"
-          if (-not (Test-Path $exe)) {
-            Write-Error "Tailscale executable not found at $exe"
-            exit 1
-          }
-
-          & $exe up --authkey="$env:TAILSCALE_AUTH_KEY" --hostname="gh-runner-$env:GITHUB_RUN_ID"
-          Start-Sleep -Seconds 3
-
-          # Wait briefly for IP assignment
+          # Bring up Tailscale with the provided auth key and set a unique hostname
+          & "$env:ProgramFiles\Tailscale\tailscale.exe" up --authkey=${{ secrets.TAILSCALE_AUTH_KEY }} --hostname=gh-runner-$env:GITHUB_RUN_ID
+          
+          # Wait for Tailscale to assign an IP
           $tsIP = $null
           $retries = 0
-          while (-not $tsIP -and $retries -lt 12) {
-            $tsIP = & $exe ip -4 2>$null
-            if ($tsIP) { break }
-            Start-Sleep -Seconds 5
-            $retries++
+          while (-not $tsIP -and $retries -lt 10) {
+              $tsIP = & "$env:ProgramFiles\Tailscale\tailscale.exe" ip -4
+              Start-Sleep -Seconds 5
+              $retries++
           }
-
+          
           if (-not $tsIP) {
-            Write-Error "Tailscale IP not assigned after wait; check Tailscale status"
-            & $exe status
-            exit 1
+              Write-Error "Tailscale IP not assigned. Exiting."
+              exit 1
           }
-
-          Add-Content -Path $env:GITHUB_ENV -Value "TAILSCALE_IP=$tsIP"
-          Write-Host "Tailscale IP: $tsIP"
-
+          echo "TAILSCALE_IP=$tsIP" >> $env:GITHUB_ENV
+      
       - name: Verify RDP Accessibility
-        shell: powershell
         run: |
-          $tsIP = $env:TAILSCALE_IP
-          if (-not $tsIP) {
-            Write-Error "TAILSCALE_IP not set"
-            exit 1
-          }
-          Write-Host "Testing TCP connectivity to $tsIP:3389"
-          $test = Test-NetConnection -ComputerName $tsIP -Port 3389 -WarningAction SilentlyContinue
-          if (-not $test.TcpTestSucceeded) {
-            Write-Error "TCP connection to RDP port 3389 failed. Test result: $($test)"
-            exit 1
-          }
-          Write-Host "TCP connectivity successful"
-
-      - name: Connection Info (printed)
-        shell: powershell
-        run: |
-          Write-Host "`n=== RDP INFO ==="
           Write-Host "Tailscale IP: $env:TAILSCALE_IP"
-          Write-Host "User: $env:RDP_USER"
-          Write-Host "Password: $env:RDP_PASS"
-          Write-Host "================="
-          Write-Host "Connect using your Tailscale client to the above IP."
+          
+          # Test connectivity using Test-NetConnection against the Tailscale IP on port 3389
+          $testResult = Test-NetConnection -ComputerName $env:TAILSCALE_IP -Port 3389
+          if (-not $testResult.TcpTestSucceeded) {
+              Write-Error "TCP connection to RDP port 3389 failed"
+              exit 1
+          }
+          Write-Host "TCP connectivity successful!"
 
-      - name: Keep Runner Alive (simple)
-        shell: powershell
+      - name: Maintain Connection
         run: |
-          Write-Host "Keeping runner active to allow RDP. Terminate the workflow when done."
+          Write-Host "`n=== RDP ACCESS ==="
+          Write-Host "Address: $env:TAILSCALE_IP"
+          Write-Host "Username: RDP"
+          Write-Host "Password: $(echo $env:RDP_CREDS)"
+          Write-Host "==================`n"
+          
+          # Keep runner active indefinitely (or until manually cancelled)
           while ($true) {
-            Start-Sleep -Seconds 300
+              Write-Host "[$(Get-Date)] RDP Active - Use Ctrl+C in workflow to terminate"
+              Start-Sleep -Seconds 300
           }
